# documentflow-ai

./: .env.example  .gitignore  PROJECT_BRIEF.md  README.md  compose.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/documentflow/: __init__.py  main.py  parsing.py
backend/src/documentflow/api/: deps.py  health.py  review.py  schemas.py
backend/src/documentflow/api/templates/: base.html  index.html  review.html
backend/src/documentflow/core/: config.py
backend/src/documentflow/db/: base.py  models.py  session.py
backend/src/documentflow/documents/: __init__.py  storage.py
backend/src/documentflow/evaluation/: __init__.py  text_normalization.py
backend/src/documentflow/extraction/: __init__.py  fake.py  mapping.py  protocol.py  types.py  wire.py
backend/src/documentflow/flagging/: __init__.py  rules.py  types.py
backend/src/documentflow/ingestion/: __init__.py  pdf.py
backend/src/documentflow/schema/: __init__.py  models.py  types.py
backend/src/documentflow/validation/: __init__.py  identifiers.py  rules.py  types.py
backend/src/documentflow/workflow/: __init__.py  pipeline.py
backend/tests/: conftest.py  test_field_value.py  test_health.py  test_layer_boundaries.py  test_parsing.py
backend/tests/api/: test_demo_extractor.py  test_review_surface.py
backend/tests/db/: test_persistence.py
backend/tests/documents/: test_storage.py
backend/tests/evaluation/: test_text_normalization.py
backend/tests/extraction/: _fixtures.py  test_adapters.py  test_mapping.py  test_pipeline.py
backend/tests/flagging/: test_build_review_flags.py
backend/tests/ingestion/: _pdf_builder.py  test_pdf.py
backend/tests/validation/: _fixtures.py  test_identifiers.py  test_rules.py  test_validate_invoice.py
backend/tests/workflow/: test_pipeline.py  test_private_smoke.py
docs/: DATA_COLLECTION.md  DECISIONS.md  EVALUATION.md  EXTRACTION.md  FLAGGING.md  SCHEMA.md  VALIDATION.md  WORKFLOW.md
docs/templates/: challenge_inventory_template.csv  freeze_inventory_template.csv  line_item_coverage_template.csv  schema_coverage_template.csv  synthetic_inventory_template.csv
